# nand2tetris

./: .dir-locals.el  .gitignore  CMakeLists.txt
src/: .clang-format  CMakeLists.txt
src/assembler/: code.hpp  parser.hpp  symboltable.hpp
src/snipets/: CMakeLists.txt  main.cpp  run_vm_translater.cpp
src/vm_translater/: code_writer.hpp  command_type.hpp  parser.hpp
tests/: CMakeLists.txt
tests/vm_translater/: test_parser.cpp
